[workspace]
resolver = "3"
members = ["logger", "state"]
default-members = []

[workspace.package]
description = "A survival sandbox game driven by the open-source community."
edition = "2024"

[workspace.dependencies]
state = { path = "./state" }
logger = { path = "./logger" }
macroquad = "0.4.14"
